[package]
name = "bomajou"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4"
reqwest = { version = "0.11.15", features = ["json"] }
serde_json = { version = "1.0.96" }
tokio = { version = "1", features = ["full"] }
